--- a/Responsive-Web-Design/Tribute-Page/css/tribute.css
+++ b/Responsive-Web-Design/Tribute-Page/css/tribute.css
@@ -1,6 +1,14 @@
 html {
+    background-color: #28784D;
+}
+
+body {
     font-family: "Trebuchet MS", Helvetica, sans-serif;
     text-align: center;
+}
+
+blockquote, cite {
+    font-style: italic;
 }
 
 img {
@@ -8,5 +16,40 @@ img {
     height: auto;
     margin: auto;
     max-width: 50%;
+    width: 25%;
 }
 
+ul {
+   max-width: 35%; 
+   margin: 0 auto;
+   text-align: left;
+}
+
+#main {
+    background-color: #75B291;
+    margin: 30px 15px;
+    padding: 15px;
+    border: 0px solid;
+    border-radius: 5px;
+}
+
+#img-div {
+    background-color: #A8D2BB;
+    margin: 30px auto;
+    padding: 15px;
+}
+
+#img-caption {
+    margin: 15px;
+    margin-bottom: 0px;
+}
+
+@media only screen and (max-height: 1079px) {
+    img {
+        width: 50%;
+    }
+
+    ul {
+        max-width: 75%;
+    }
+}
